rewrite boilerplate code using lombok add role and user to parser (untested) update readme